# dynamic-filter

./: .gitignore  AUTHORS  LICENSE  README.md  pyproject.toml
dynamic_filter/: __init__.py  constants.py  fields.py  fields_registry.py  filter_strategy.py  filterset.py  utils.py
