[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dynamic-filter"
version = "0.0.1"  # Using static versioning for simplicity
authors = [{name = "Rahul Hiragond", email = "rahulhiragond04@gmail.com"}]
maintainers = [{name = "Rahul Hiragond", email = "rahulhiragond04@gmail.com"}]
license = {text = "MIT"}
description = "Django-Dynamic-filter is a reusable Django application for allowing users to filter querysets dynamically with minimal configuration."
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = ["Django>=4.2"]

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
exclude = ["tests*"]
namespaces = false

[tool.flit.module]
name = "dynamic_filter"

[tool.coverage.run]
relative_files = true